feat: support display name
Endpoints now have a display name which is used to build a proper caller
ID to be used when dialing internal users. This information is also
provided by the bouncer so Stasis apps know which caller ID to use for
calling the other party.

Closes #8.
